changes to 04 per course prep

--- a/03-introduction-to-linear-models/04-lesson/03-04-lesson.Rmd
+++ b/03-introduction-to-linear-models/04-lesson/03-04-lesson.Rmd
@@ -28,7 +28,7 @@ textbooks$course <- as.character(textbooks$course)
 
 ```
 
-## Interpretation of regression
+## Data set-up
 
 ### Is that textbook overpriced?
 
@@ -38,17 +38,22 @@ Data were collected on 73 textbooks required for a few randomly selected courses
 
 > What factors are associated with the price of each book at the UCLA bookstore?
 
-```{r 1}
-head(textbooks)
+```{r 1, echo = TRUE}
+glimpse(textbooks)
 ```
 
 ### Compared to the course number?
 
 One might suppose that more advanced books cost more. Our best guess for the level of the course is to extract the course number. The scatterplot shows the relationship between the course number and the price of the book at the UCLA bookstore. 
 
-```{r 2}
+```{r}
+textbooks <- textbooks %>%
+  mutate(course_number = readr::parse_number(course))
+```
+
+
+```{r 2, echo = TRUE}
 textbooks %>%
-  mutate(course_number = readr::parse_number(course)) %>%
   ggplot(aes(x = course_number, y = ucla_new)) +
     geom_point()
 ```
@@ -59,7 +64,7 @@ This relationship is very weak, and if anything it appears to be negative.
 
 Instead, since Amazon.com provides a ready alternative for UCLA students, let's consider the relationship between the prices of these books at Amazon, relative to their price at the UCLA bookstore. 
 
-```{r 3}
+```{r 3, echo = TRUE}
 ggplot(data = textbooks, aes(x = amaz_new, y = ucla_new)) +
   geom_point()
 ```
@@ -68,30 +73,34 @@ Here we see clear evidence of a strong, positive, linear relationship.
 
 As noted previously, the regression line can be added to the plot with the `geom_smooth()` command. While this provides us with the a way to visualize our model, it doesn't actually tell us what the fitted coefficients are. 
 
-```{r 4}
+```{r 4, echo = TRUE}
 ggplot(data = textbooks, aes(x = amaz_new, y = ucla_new)) +
   geom_point() +
   geom_smooth(method = "lm", se = FALSE)
 ```
 
-### Slope & Intercept
+## Slope & intercept interpretation
 
-To get those values, we'll use the `lm()` command to actually fit the model. We specify two arguments to `lm()`: a `formula` that indicates which variable is the response and which is the explanatory; and a `data` argument that identifies the data frame where those variables are located. 
+To get those values, we'll use the `lm()` command to actually fit the model. We specify two arguments to `lm()`: 
 
-```{r 5}
+1. a `formula` that indicates which variable is the response and which is the explanatory
+2. a `data` argument that identifies the data frame where those variables are located
+
+
+```{r 5, echo = TRUE}
 lm(ucla_new ~ amaz_new, data = textbooks)
 ```
 
-The output from `lm()` reminds us how we called it, and then gives us the fitted coefficients. The value of the intercept coefficient---$\hat{beta}_0$---is 0.929 dollars, while the value of the slope coefficient---$\hat{\beta}_1$---is one dollar and twenty cents. 
+The output from `lm()` reminds us how we called it, and then gives us the fitted coefficients. The value of the intercept coefficient---$\hat{beta}_0$---is \$0.93, while the value of the slope coefficient---$\hat{\beta}_1$---is \$1.20. 
 
 ### Regression equation
 
 $$
-  \widehat{ucla_{new}} = 0.929 + 1.199 \cdot amaz_{new}
+  \widehat{ucla_{new}} = 0.929 + 1.199 \cdot amazon_{new}
 $$
 
 
-What this says is that for each additional dollar that Amazon charges for a book, the UCLA bookstore charges about $1.20. In effect, the prices at the UCLA bookstore are about 20% higher than those on Amazon. 
+What this says is that for each additional dollar that Amazon charges for a book, the mean price of books at the UCLA bookstore increase by about $1.20. In effect, the mean price of books at the UCLA bookstore is about 20% higher than those on Amazon. 
 
 Generally, we are most interested in the slope coefficient, but occasionally the intercept coefficient is interesting as well. In this case, the intercept is not interesting: it merely tells us that we should expect a book that retails for 0 dollars on Amazon to cost about 93 cents at the UCLA bookstore. This, of course, is irrelevant. Furthermore, since the least expensive book present in the data set cost $8.60, to discuss a book that was free on Amazon would be to extrapolate our findings to values outside the range of the data we collected. This is always dangerous because we can never know whether a model is appropriate outside of the range of the dataset. 
 
@@ -101,15 +110,16 @@ When interpreting slope coefficients, one must pay careful attention to units an
 
 Here, we create a new variable for the price at Amazon in cents, and re-fit the model. Note that while the coefficient has changed, the underlying meaning has not. Here, we say that for each additional cent that a book costs on Amazon, the expected price at the UCLA bookstore increases by about 0.01199 dollars, or 1.2 cents. Thus, in both cases, the price of a book at the UCLA bookstore is about 20% higher, on average, than the corresponding price on Amazon.com. 
 
-```{r 6}
-textbooks %>%
-  mutate(amaz_new_cents = amaz_new * 100) %>%
-  lm(ucla_new ~ amaz_new_cents, data = .)
+```{r 6, echo = TRUE}
+textbooks <- textbooks %>%
+  mutate(amaz_new_cents = amaz_new * 100) 
+
+lm(ucla_new ~ amaz_new_cents, data = textbooks)
 ```
 
 It's time for you to start fitting your own regression models. 
 
-### Interpretation of coefficients
+## Your turn! 
 
 Recall that the fitted model for the poverty rate of U.S. counties as a function of high school graduation rate is:
 
@@ -121,23 +131,21 @@ $$
 
 ```{r mc1}
 question("Which of the following is the correct interpretation of the slope coefficient?",
-  answer("Among U.S. counties, each additional percentage point increase in the poverty rate is associated with about a 0.591 percentage point decrease in the high school graduation rate. "),
-  answer("Among U.S. counties, each additional percentage point increase in the high school graduation rate is associated with about a 0.591 percentage point decrease in the poverty rate.", correct = TRUE, message = "Remember that the slope represents the estimated change in the response variable for a one unit change in the explanatory variable."),
-  answer("Among U.S. counties, each additional percentage point increase in the high school graduation rate is associated with about a 0.591 percentage point increase in the poverty rate."),
+  answer("Among U.S. counties, each additional percentage point increase in the poverty rate is associated with about a 0.591 percentage point decrease in the mean high school graduation rate. "),
+  answer("Among U.S. counties, each additional percentage point increase in the high school graduation rate is associated with about a 0.591 percentage point decrease in the mean poverty rate.", correct = TRUE, message = "Remember that the slope represents the estimated change in the response variable for a one unit change in the explanatory variable."),
+  answer("Among U.S. counties, each additional percentage point increase in the high school graduation rate is associated with a 0.591 percentage point decrease in the poverty rate for each school.", message = "Remember when we are discussing the change in the response variable, we are talking about the mean!"),
   answer("Among U.S. counties, a 1% increase in the high school graduation rate is associated with about a 0.591% decrease in the poverty rate."),
   allow_retry = TRUE
 )
 ```
 
-
+###
 
 ### Interpretation in context
 
 A politician interpreting the relationship between poverty rates and high school graduation rates implores his constituents:
 
 > If we can lower the poverty rate by 59%, we'll double the high school graduate rate in our county (i.e. raise it by 100%). 
-
-
 
 ```{r mc2}
 question("Which of the following mistakes in interpretation has the politician made?",
@@ -151,7 +159,7 @@ question("Which of the following mistakes in interpretation has the politician m
 ```
 
 
-### Fitting simple linear models
+## Fitting simple linear models
 
 While the `geom_smooth(method = "lm")` function is useful for drawing linear models on a scatterplot, it doesn't actually return the characteristics of the model. As suggested by that syntax, however, the function that creates linear models is `lm()`. This function generally takes two arguments:
 
@@ -160,9 +168,11 @@ While the `geom_smooth(method = "lm")` function is useful for drawing linear mod
 
 The `lm()` function return a model object having class `"lm"`. This object contains lots of information about your regression model, including the data used to fit the model, the specification of the model, the fitted values and residuals, etc.
 
-- Using the `bdims` dataset, create a linear model for the weight of people as a function of their height.
-- Using the `mlbBat10` dataset, create a linear model for `SLG` as a function of `OBP`.
-- Using the `mammals` dataset, create a linear model for the body weight of mammals as a function of their brain weight, after taking the natural log of both variables.
+For this exercise, fit the following regression models: 
+
+1. Using the `bdims` dataset, create a linear model for the weight of people (`wgt`) as a function of their height (`hgt`).
+2. Using the `mlbBat10` dataset, create a linear model for `slg` (y) as a function of `obp` (x).
+3. Using the `mammals` dataset, create a linear model for the body weight of mammals (`body_wt`) as a function of their brain weight (`brain_wt`), after taking the natural log of both variables.
 
 
 ```{r ex1, exercise = TRUE}
@@ -190,6 +200,9 @@ lm(slg ~ obp, data = mlbbat10)
 # Log-linear model for body weight as a function of brain weight
 lm(log(body_wt) ~ log(brain_wt), data = mammals)
 ```
+
+### 
+
 ### Units and scale
 
 In the previous examples, we fit two regression models:
@@ -197,8 +210,9 @@ $$
     \widehat{wgt} = -105.011 + 1.018 \cdot hgt
 $$
 and
+
 $$
-    \widehat{slg} = 0.009 + 1.110 \cdot obp \,.
+    \widehat{slg} = 0.009 + 1.110 \cdot obp
 $$
 
 ```{r mc3}
@@ -211,36 +225,34 @@ question("Which of the following statements is **incorrect**?",
 ```
 
 
-## Your linear model object
-
-### Is that textbook overpriced?
-
+## A linear model object
 
 Previously, we learned how to fit a regression model using the `lm()` command. However, we didn't do much with it---we only displayed the fitted coefficients in the console. The output from `lm()` is an object, and there are a lot of useful things that you can do with that object. To get started, we need to store the output from `lm()` as an object in our environment, in this case aptly named `mod`. 
 
-```{r 11}
+```{r 11, echo = TRUE}
 mod <- lm(ucla_new ~ amaz_new, data = textbooks)
+
 ```
 
-Note that `mod` is of class `lm`. This object contains all of the information needed to fit our regression model, including (by default) the relevant data, and lots of other pieces of information that we can extract in various ways. It's worth repeating that `mod` is an object of type `lm`---it's not a `data.frame`, a `function`, a `matrix`, or a `list`.
+Note that `mod` is of class `lm`. This object contains all of the information needed to fit our regression model, including (by default) the relevant data, and lots of other pieces of information that we can extract in various ways. It's worth repeating that `mod` is an object of type `lm`---it's not a `data.frame`, or a `function`, or a `matrix`, or a `vector`.
 
-```{r 12}
+```{r 12, echo = TRUE}
 class(mod)
 ```
 
 ### Print
 
-By default, when you try to print an `lm` object, you see the call, as well as the fitted coefficients.
+By default, when you try to output an `lm` object, you see the "call" (the formula used to fit the model), as well as the fitted coefficients.
 
-```{r 13}
+```{r 13, echo = TRUE}
 mod
 ```
 
 ### Fitted coefficients
 
-You can also return just the fitted coefficients as a vector using the `coef()` function. For our purposes, these are the pieces of information that we are most interested in. 
+You can also return just the fitted coefficients as a vector using the `coef()` function. This function takes a `lm` object as an input and outputs the coefficients from the model. For our purposes, these are the pieces of information that we are most interested in. 
 
-```{r 14}
+```{r 14, echo = TRUE}
 coef(mod)
 ```
 
@@ -250,17 +262,17 @@ In this tutorial, we treat regression as a descriptive statistical technique---t
 
 However, we won't dive into this at the moment. 
 
-```{r 15}
+```{r 15, echo = TRUE}
 summary(mod)
 ```
 
 ### Fitted values
 
-Since the object `mod` contains everything R knows about our model, we can ask R for the fitted values, using the `fitted.values()` function. This returns a vector containing the $\hat{y}$ values for each data point. 
+Since the object `mod` contains everything R knows about our model, we can ask R for the fitted values, using the `fitted.values()` function. This returns a vector containing the $\hat{y}$ values for each observation in our dataset.
 
 In general, the length of the vector of fitted values is the same as the number of rows in the original data frame, since each observation corresponds to exactly one value of $\hat{y}$. However, if there were any observations with missing data, those will be automatically discarded by R when the model is fit, and thus, the length of the vector of fitted values may not be a large as the number of rows in the original data frame. 
 
-```{r 16}
+```{r 16, echo = TRUE}
 fitted.values(mod)
 ```
 
@@ -268,30 +280,31 @@ fitted.values(mod)
 
 Similarly, each fitted value generates a residual. This residual is the difference between the actual observed value of the response variable, and the expected value of the response according to our model. These residuals can be retrieved using the `residuals()` function, which returns the vectors of residuals. 
 
-```{r 17}
+```{r 17, echo = TRUE}
 residuals(mod)
 ```
+
 ### the broom package
 
-The R ecosystem is constantly evolving. In this tutorial---and series of tutorials---we have been working with a set of tools called the **tidyverse**. One of the packages in the tidyverse is called **broom**, since its goal is to help you tidy up a bit. By loading the **broom** package and then running the `augment()` function on our model object, we recover a `data.frame` that contains our original response and explanatory variable, along with the fitted values, residuals, leverage scores, and several other pieces of information relevant to each observation. Working with these tidy data frames can simplify some of the work we do with our models after they are fit. 
+The R ecosystem is constantly evolving. In this tutorial---and series of tutorials---we have been working with a set of tools called the **tidyverse**. One of the packages in the tidyverse is called **broom**, since its goal is to help you tidy up a bit. 
 
-```{r 18}
+By loading the **broom** package and then running the `augment()` function on our `lm` model object, we recover a `data.frame` that contains our original response and explanatory variable, along with the fitted values, residuals, leverage scores, and several other pieces of information relevant to each observation. Working with these tidy data frames can simplify some of the work we do with our models after they are fit. 
+
+```{r 18, echo = TRUE}
 augment(mod)
 ```
 
 In the next series of exercises, you'll work with your own linear model objects. 
 
-### The lm summary output
+## Your turn!  
 
 An `"lm"` object contains a host of information about the regression model that you fit. There are various ways of extracting different pieces of information. 
 
 The `coef()` function displays only the values of the coefficients. Conversely, the `summary()` function displays not only that information, but a bunch of other information, including the associated standard error and p-value for each coefficient, the $R^2$, adjusted $R^2$, and the residual standard error. The summary of an `"lm"` object in R is very similar to the output you would see in other statistical computing environments (e.g. Stata, SPSS, etc.)
 
-
-
 We have already created the `mod` object, a linear model for the weight of individuals as a function of their height, using the `bdims` dataset and the code
 
-```{r 19}
+```{r 19, echo = TRUE}
 mod <- lm(wgt ~ hgt, data = bdims)
 ```
 
@@ -308,7 +321,7 @@ mod <- lm(wgt ~ hgt, data = bdims)
 # Show the coefficients
 
 
-# Show the full output
+# Show the full model output
 
 ```
 
@@ -320,7 +333,7 @@ mod <- lm(wgt ~ hgt, data = bdims)
 # Show the coefficients
 coef(mod)
 
-# Show the full output
+# Show the full model output
 summary(mod)
 ```
 
@@ -332,19 +345,18 @@ $$
   e_i = y_i - \hat{y}_i
 $$
 
-The least squares fitting procedure guarantees that the mean of the residuals is zero (n.b., numerical instability may result in the computed values not being *exactly* zero). At the same time, the mean of the fitted values must equal the mean of the response variable. 
+The least squares fitting procedure guarantees that the mean of the residuals is zero. At the same time, the mean of the fitted values must equal the mean of the response variable.
 
 In this exercise, we will confirm these two mathematical facts by accessing the fitted values and residuals with the `fitted.values()` and `residuals()` functions, respectively, for the following model:
 
-```{r 20, eval=FALSE}
+```{r 20, eval = FALSE, echo = TRUE}
 mod <- lm(wgt ~ hgt, data = bdims)
 ```
 
+`mod` (defined above) is available in your workspace. We will use the `all.equal()` function to confirm that the mean of the body weights equals the mean of the fitted values of `mod`. This function takes two inputs (separated by a comma) that you would like to check if they are equal (up to a tolerance of 1.5e-8). 
+*Hint*: Remember, you can extract a specific column of a `data.frame` using the `$`. 
 
-`mod` (defined above) is available in your workspace.
-
-- Confirm that the mean of the body weights equals the mean of the fitted values of `mod`.
-- Compute the mean of the residuals of `mod`.
+Next, compute the mean of the residuals of `mod` and check if it is equal to 0.
 
 ```{r ex4-setup}
 mod <- lm(wgt ~ hgt, data = bdims)
@@ -352,23 +364,19 @@ mod <- lm(wgt ~ hgt, data = bdims)
 
 ```{r ex4, exercise = TRUE}
 # Mean of weights equal to mean of fitted values?
-___ == ___
+all.equal(___, ___) 
 
 # Mean of the residuals
-
+___(residuals(___))
 ```
 
 ```{r ex4-hint-1}
-mean(___) == mean(fitted.values(mod))
-```
-
-```{r ex4-hint-2}
-mean(residuals(___))
+all.equal(mean(bdims$wgt), mean(fitted.values(mod))) 
 ```
 
 ```{r ex4-solution}
 # Mean of weights equal to mean of fitted values?
-mean(bdims$wgt) == mean(fitted.values(mod))
+all.equal(mean(bdims$wgt), mean(fitted.values(mod)))
 
 # Mean of the residuals
 mean(residuals(mod))
@@ -382,7 +390,7 @@ The `augment()` function from the **broom** package (which is already loaded for
 
 The same linear model from the last exercise, `mod`, is available in your workspace.
 
-- Create a new data frame called `bdims_tidy` that is the augmentation of the `mod` linear model. 
+- Create a new data frame called `bdims_tidy` that is the `augment`ation of the `mod` linear model. 
 - View the `bdims_tidy` data frame using `glimpse()`.
 
 ```{r ex5-setup}
@@ -390,7 +398,7 @@ mod <- lm(wgt ~ hgt, data = bdims)
 ```
 
 ```{r ex5, exercise = TRUE}
-# Load broom
+# Load the broom package
 
 
 # Create bdims_tidy
@@ -409,7 +417,7 @@ glimpse(___)
 ```
 
 ```{r ex5-solution}
-# Load broom
+# Load the broom package
 library(broom)
 
 # Create bdims_tidy
@@ -424,7 +432,8 @@ glimpse(bdims_tidy)
 ### Is that textbook overpriced?
 
 Recall our previous example about textbooks at the UCLA bookstore. We fit the regression model using the `lm()` command, and stored the resulting model object. 
-```{r lm1}
+
+```{r lm1, echo = TRUE}
 mod <- lm(ucla_new ~ amaz_new, data = textbooks)
 ```
 
@@ -432,7 +441,7 @@ mod <- lm(ucla_new ~ amaz_new, data = textbooks)
 
 By examining the residuals, we can learn about whether particular textbooks appear to be under- or over-priced. In this case, the most overpriced book cost $197 at the UCLA bookstore, but just $131 on Amazon---a markup of $66! The model predicts a cost of $158, resulting in a residual of $39. 
 
-```{r lm2}
+```{r lm2, echo = TRUE}
 augment(mod) %>%
   arrange(desc(.resid)) %>%
   head()
@@ -442,7 +451,7 @@ augment(mod) %>%
 
 This turns out to be the management textbook "Financial Statement Analysis and Security Valuation". Does this qualifies as irony? 
 
-```{r lm3}
+```{r lm3, echo = TRUE}
 textbooks %>%
   filter(ucla_new == 197)
 ```
@@ -463,18 +472,17 @@ For example, the OpenIntro book "Introductory Statistics with Randomization and 
 knitr::include_graphics("images/ISRS.png")
 ```
 
-
 [Amazon ISRS](https://www.amazon.com/Introductory-Statistics-Randomization-Simulation-David/dp/1500576697)
 
 ### New data
 
-The `predict()` function, when applied to an `lm` object, will return the fitted values for the original observations by default. However, if we specify the `newdata` argument, we can use the model to make predictions about any observations we want. Note that the object passed to `newdata` must be a `data.frame` with a variable with the same name as the explanatory variable used to fit the model. Note that the result is a vector of fitted values. 
+The `predict()` function, when applied to an `lm` object, will return the fitted values for the original observations by default. However, if we specify the `newdata` argument, we can use the model to make predictions about any observations we want. Note that the object passed to `newdata` must be a `data.frame` that has a variable with the same name as the explanatory variable used to fit the model. Note also that the output of the `predict()` function is a vector of fitted values. 
 
 Here, we create a `data.frame` with one variable and one observation for the ISRS book. 
 
-
-```{r lm4}
+```{r lm4, echo = TRUE}
 new_data <- data.frame(amaz_new = 8.49)
+
 predict(mod, newdata = new_data)
 ```
 
@@ -484,27 +492,26 @@ The model returns that the expected price at the UCLA bookstore is $11.11. We do
 
 Alternatively, the `augment()` function from **broom** will also take a `newdata` argument. However, this function will return a `data.frame`. This is useful if you want to do a bit more with your predictions. Here, we first use `augment()` to create a new `data.frame` of predicted values, and then use `geom_point()` to put those observations on the scatterplot of the original data. Here the single observation for the ISRS book is shown in red.
 
+```{r lm5, echo = TRUE}
+isrs <- augment(mod, newdata = new_data)
 
-```{r lm5}
-
-isrs <- broom::augment(mod, newdata = new_data)
 ggplot(data = textbooks, aes(x = amaz_new, y = ucla_new)) + 
-  geom_point() + geom_smooth(method = "lm") +
+  geom_point() + 
+  geom_smooth(method = "lm") +
   geom_point(data = isrs, aes(y = .fitted), size = 3, color = "red")
 ```
 
 Now it's time for you to make some of your own predictions. 
 
-### Making predictions
+## Your turn! 
 
-The `fitted.values()` function or the `augment()`-ed data frame provides us with the fitted values for the observations that were in the original data. However, once we have fit the model, we may want to compute expected values for observations that were **not** present in the data on which the model was fit. These types of predictions are called *out-of-sample*. 
+The `fitted.values()` function or the `augment()`-ed data frame provides us with the fitted values for the observations that were in the original data. However, once we have fit the model, we may want to compute expected values for observations that were **not** present in the data on which the model was fit. These types of predictions are called *out-of-sample* predictions. 
 
 The `ben` data frame contains a height and weight observation for one person. The `mod` object contains the fitted model for weight as a function of height for the observations in the `bdims` dataset. We can use the `predict()` function to generate expected values for the weight of new individuals. We must pass the data frame of new observations through the `newdata` argument.
 
-
 The same linear model, `mod`, is defined in your workspace.
 
-- Print `ben` to the console.
+- Output `ben` to the console to take a look at it!
 - Use `predict()` with the `newdata` argument to compute the expected weight of the individual in the `ben` data frame.
 
 ```{r ex6-setup}
@@ -537,8 +544,7 @@ predict(mod, newdata = ben)
 
 The `geom_smooth()` function makes it easy to add a simple linear regression line to a scatterplot of the corresponding variables. And in fact, there are more complicated regression models that can be visualized in the data space with `geom_smooth()`. However, there may still be times when we will want to add regression lines to our scatterplot manually. To do this, we will use the `geom_abline()` function, which takes `slope` and `intercept` arguments. Naturally, we have to compute those values ahead of time, but we already saw how to do this (e.g. using `coef()`). 
 
-The `coefs` data frame contains the model estimates retrieved from `coef()`. Passing this to `geom_abline()` as the `data` argument will enable you to draw a straight line on your scatterplot.
-
+The `coefs` dataframe contains the model estimates retrieved from `coef()` function. Passing this to `geom_abline()` as the `data` argument will enable you to draw a straight line on your scatterplot.
 
 Use `geom_abline()` to add a line defined in the `coefs` data frame to a scatterplot of weight vs. height for individuals in the `bdims` dataset.
 
@@ -559,7 +565,7 @@ ggplot(data = bdims, aes(x = hgt, y = wgt)) +
 ```
 
 <div id="ex7-hint">
-**Hint:** `hgt` variable in the `coefs` data frame indicates the slope.
+**Hint:** The `hgt` variable in the `coefs` data frame indicates the slope.
 </div>
 
 ```{r ex7-solution}
