--- a/03-introduction-to-linear-models/04-lesson/03-04-lesson.Rmd
+++ b/03-introduction-to-linear-models/04-lesson/03-04-lesson.Rmd
@@ -487,7 +487,7 @@ The same linear model, `mod`, is defined in your workspace.
 - Use `predict()` with the `newdata` argument to compute the expected weight of the individual in the `ben` data frame.
 
 ```{r ex6-setup}
-wgt_wgt_mod <- lm(wgt ~ hgt, data = bdims)
+hgt_wgt_mod <- lm(wgt ~ hgt, data = bdims)
 ben <- data.frame(wgt = 74.8, hgt = 182.8)
 ```
 
